ctpgo/cctptrade_api_darwin.h

DLL_EXPORT_C_DECL void* WPCTP tCreateSpi();
// 当客户端与交易后台建立起通信连接时（还未登录前），该方法被调用。
DLL_EXPORT_C_DECL void WPCTP tOnFrontConnected(void* spi, void* func);
// 当客户端与交易后台通信连接断开时，该方法被调用。当发生这个情况后，API会自动重新连接，客户端可不做处理。
DLL_EXPORT_C_DECL void WPCTP tOnFrontDisconnected(void* spi, void* func);
// 心跳超时警告。当长时间未收到报文时，该方法被调用。
DLL_EXPORT_C_DECL void WPCTP tOnHeartBeatWarning(void* spi, void* func);
// 客户端认证响应
DLL_EXPORT_C_DECL void WPCTP tOnRspAuthenticate(void* spi, void* func);
// 登录请求响应
DLL_EXPORT_C_DECL void WPCTP tOnRspUserLogin(void* spi, void* func);
// 登出请求响应
DLL_EXPORT_C_DECL void WPCTP tOnRspUserLogout(void* spi, void* func);
// 用户口令更新请求响应
DLL_EXPORT_C_DECL void WPCTP tOnRspUserPasswordUpdate(void* spi, void* func);
// 资金账户口令更新请求响应
DLL_EXPORT_C_DECL void WPCTP tOnRspTradingAccountPasswordUpdate(void* spi, void* func);
// 查询用户当前支持的认证模式的回复
DLL_EXPORT_C_DECL void WPCTP tOnRspUserAuthMethod(void* spi, void* func);
// 获取图形验证码请求的回复
DLL_EXPORT_C_DECL void WPCTP tOnRspGenUserCaptcha(void* spi, void* func);
// 获取短信验证码请求的回复
DLL_EXPORT_C_DECL void WPCTP tOnRspGenUserText(void* spi, void* func);
// 报单录入请求响应
DLL_EXPORT_C_DECL void WPCTP tOnRspOrderInsert(void* spi, void* func);
// 预埋单录入请求响应
DLL_EXPORT_C_DECL void WPCTP tOnRspParkedOrderInsert(void* spi, void* func);
// 预埋撤单录入请求响应
DLL_EXPORT_C_DECL void WPCTP tOnRspParkedOrderAction(void* spi, void* func);
// 报单操作请求响应
DLL_EXPORT_C_DECL void WPCTP tOnRspOrderAction(void* spi, void* func);
// 查询最大报单数量响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryMaxOrderVolume(void* spi, void* func);
// 投资者结算结果确认响应
DLL_EXPORT_C_DECL void WPCTP tOnRspSettlementInfoConfirm(void* spi, void* func);
// 删除预埋单响应
DLL_EXPORT_C_DECL void WPCTP tOnRspRemoveParkedOrder(void* spi, void* func);
// 删除预埋撤单响应
DLL_EXPORT_C_DECL void WPCTP tOnRspRemoveParkedOrderAction(void* spi, void* func);
// 执行宣告录入请求响应
DLL_EXPORT_C_DECL void WPCTP tOnRspExecOrderInsert(void* spi, void* func);
// 执行宣告操作请求响应
DLL_EXPORT_C_DECL void WPCTP tOnRspExecOrderAction(void* spi, void* func);
// 询价录入请求响应
DLL_EXPORT_C_DECL void WPCTP tOnRspForQuoteInsert(void* spi, void* func);
// 报价录入请求响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQuoteInsert(void* spi, void* func);
// 报价操作请求响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQuoteAction(void* spi, void* func);
// 批量报单操作请求响应
DLL_EXPORT_C_DECL void WPCTP tOnRspBatchOrderAction(void* spi, void* func);
// 期权自对冲录入请求响应
DLL_EXPORT_C_DECL void WPCTP tOnRspOptionSelfCloseInsert(void* spi, void* func);
// 期权自对冲操作请求响应
DLL_EXPORT_C_DECL void WPCTP tOnRspOptionSelfCloseAction(void* spi, void* func);
// 申请组合录入请求响应
DLL_EXPORT_C_DECL void WPCTP tOnRspCombActionInsert(void* spi, void* func);
// 请求查询报单响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryOrder(void* spi, void* func);
// 请求查询成交响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryTrade(void* spi, void* func);
// 请求查询投资者持仓响应
DLL_EXPORT_C_DECL void WPCTP tOnRspQryInvestorPosition(void* spi, void* func);