pyctp/macos/ctptrade_api.py


    def CreateSpi(self):
        self.pSpi = self.h.tCreateSpi()
        #################### 响应函数 #########################
        # 当客户端与交易后台建立起通信连接时（还未登录前），该方法被调用。
        self.h.tOnFrontConnected.argtypes = [c_void_p, c_void_p]
        self.h.tOnFrontConnected.restype = None
        self.FP_OnFrontConnected = CFUNCTYPE(None)(self.__OnFrontConnected)
        self.h.tOnFrontConnected(self.pSpi, self.FP_OnFrontConnected)
        # 当客户端与交易后台通信连接断开时，该方法被调用。当发生这个情况后，API会自动重新连接，客户端可不做处理。
        self.h.tOnFrontDisconnected.argtypes = [c_void_p, c_void_p]
        self.h.tOnFrontDisconnected.restype = None
        self.FP_OnFrontDisconnected = CFUNCTYPE(None, c_int32)(self.__OnFrontDisconnected)
        self.h.tOnFrontDisconnected(self.pSpi, self.FP_OnFrontDisconnected)
        # 心跳超时警告。当长时间未收到报文时，该方法被调用。
        self.h.tOnHeartBeatWarning.argtypes = [c_void_p, c_void_p]
        self.h.tOnHeartBeatWarning.restype = None
        self.FP_OnHeartBeatWarning = CFUNCTYPE(None, c_int32)(self.__OnHeartBeatWarning)
        self.h.tOnHeartBeatWarning(self.pSpi, self.FP_OnHeartBeatWarning)
        # 客户端认证响应
        self.h.tOnRspAuthenticate.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspAuthenticate.restype = None
        self.FP_OnRspAuthenticate = CFUNCTYPE(None, POINTER(CThostFtdcRspAuthenticateField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspAuthenticate)
        self.h.tOnRspAuthenticate(self.pSpi, self.FP_OnRspAuthenticate)
        # 登录请求响应
        self.h.tOnRspUserLogin.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspUserLogin.restype = None
        self.FP_OnRspUserLogin = CFUNCTYPE(None, POINTER(CThostFtdcRspUserLoginField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspUserLogin)
        self.h.tOnRspUserLogin(self.pSpi, self.FP_OnRspUserLogin)
        # 登出请求响应
        self.h.tOnRspUserLogout.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspUserLogout.restype = None
        self.FP_OnRspUserLogout = CFUNCTYPE(None, POINTER(CThostFtdcUserLogoutField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspUserLogout)
        self.h.tOnRspUserLogout(self.pSpi, self.FP_OnRspUserLogout)
        # 用户口令更新请求响应
        self.h.tOnRspUserPasswordUpdate.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspUserPasswordUpdate.restype = None
        self.FP_OnRspUserPasswordUpdate = CFUNCTYPE(None, POINTER(CThostFtdcUserPasswordUpdateField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspUserPasswordUpdate)
        self.h.tOnRspUserPasswordUpdate(self.pSpi, self.FP_OnRspUserPasswordUpdate)
        # 资金账户口令更新请求响应
        self.h.tOnRspTradingAccountPasswordUpdate.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspTradingAccountPasswordUpdate.restype = None
        self.FP_OnRspTradingAccountPasswordUpdate = CFUNCTYPE(None, POINTER(CThostFtdcTradingAccountPasswordUpdateField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspTradingAccountPasswordUpdate)
        self.h.tOnRspTradingAccountPasswordUpdate(self.pSpi, self.FP_OnRspTradingAccountPasswordUpdate)
        # 查询用户当前支持的认证模式的回复
        self.h.tOnRspUserAuthMethod.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspUserAuthMethod.restype = None
        self.FP_OnRspUserAuthMethod = CFUNCTYPE(None, POINTER(CThostFtdcRspUserAuthMethodField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspUserAuthMethod)
        self.h.tOnRspUserAuthMethod(self.pSpi, self.FP_OnRspUserAuthMethod)
        # 获取图形验证码请求的回复
        self.h.tOnRspGenUserCaptcha.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspGenUserCaptcha.restype = None
        self.FP_OnRspGenUserCaptcha = CFUNCTYPE(None, POINTER(CThostFtdcRspGenUserCaptchaField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspGenUserCaptcha)
        self.h.tOnRspGenUserCaptcha(self.pSpi, self.FP_OnRspGenUserCaptcha)
        # 获取短信验证码请求的回复
        self.h.tOnRspGenUserText.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspGenUserText.restype = None
        self.FP_OnRspGenUserText = CFUNCTYPE(None, POINTER(CThostFtdcRspGenUserTextField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspGenUserText)
        self.h.tOnRspGenUserText(self.pSpi, self.FP_OnRspGenUserText)
        # 报单录入请求响应
        self.h.tOnRspOrderInsert.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspOrderInsert.restype = None
        self.FP_OnRspOrderInsert = CFUNCTYPE(None, POINTER(CThostFtdcInputOrderField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspOrderInsert)
        self.h.tOnRspOrderInsert(self.pSpi, self.FP_OnRspOrderInsert)
        # 预埋单录入请求响应
        self.h.tOnRspParkedOrderInsert.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspParkedOrderInsert.restype = None
        self.FP_OnRspParkedOrderInsert = CFUNCTYPE(None, POINTER(CThostFtdcParkedOrderField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspParkedOrderInsert)
        self.h.tOnRspParkedOrderInsert(self.pSpi, self.FP_OnRspParkedOrderInsert)
        # 预埋撤单录入请求响应
        self.h.tOnRspParkedOrderAction.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspParkedOrderAction.restype = None
        self.FP_OnRspParkedOrderAction = CFUNCTYPE(None, POINTER(CThostFtdcParkedOrderActionField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspParkedOrderAction)
        self.h.tOnRspParkedOrderAction(self.pSpi, self.FP_OnRspParkedOrderAction)
        # 报单操作请求响应
        self.h.tOnRspOrderAction.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspOrderAction.restype = None
        self.FP_OnRspOrderAction = CFUNCTYPE(None, POINTER(CThostFtdcInputOrderActionField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspOrderAction)
        self.h.tOnRspOrderAction(self.pSpi, self.FP_OnRspOrderAction)
        # 查询最大报单数量响应
        self.h.tOnRspQryMaxOrderVolume.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryMaxOrderVolume.restype = None
        self.FP_OnRspQryMaxOrderVolume = CFUNCTYPE(None, POINTER(CThostFtdcQryMaxOrderVolumeField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryMaxOrderVolume)
        self.h.tOnRspQryMaxOrderVolume(self.pSpi, self.FP_OnRspQryMaxOrderVolume)
        # 投资者结算结果确认响应
        self.h.tOnRspSettlementInfoConfirm.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspSettlementInfoConfirm.restype = None
        self.FP_OnRspSettlementInfoConfirm = CFUNCTYPE(None, POINTER(CThostFtdcSettlementInfoConfirmField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspSettlementInfoConfirm)
        self.h.tOnRspSettlementInfoConfirm(self.pSpi, self.FP_OnRspSettlementInfoConfirm)
        # 删除预埋单响应
        self.h.tOnRspRemoveParkedOrder.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspRemoveParkedOrder.restype = None
        self.FP_OnRspRemoveParkedOrder = CFUNCTYPE(None, POINTER(CThostFtdcRemoveParkedOrderField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspRemoveParkedOrder)
        self.h.tOnRspRemoveParkedOrder(self.pSpi, self.FP_OnRspRemoveParkedOrder)
        # 删除预埋撤单响应
        self.h.tOnRspRemoveParkedOrderAction.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspRemoveParkedOrderAction.restype = None
        self.FP_OnRspRemoveParkedOrderAction = CFUNCTYPE(None, POINTER(CThostFtdcRemoveParkedOrderActionField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspRemoveParkedOrderAction)
        self.h.tOnRspRemoveParkedOrderAction(self.pSpi, self.FP_OnRspRemoveParkedOrderAction)
        # 执行宣告录入请求响应
        self.h.tOnRspExecOrderInsert.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspExecOrderInsert.restype = None
        self.FP_OnRspExecOrderInsert = CFUNCTYPE(None, POINTER(CThostFtdcInputExecOrderField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspExecOrderInsert)
        self.h.tOnRspExecOrderInsert(self.pSpi, self.FP_OnRspExecOrderInsert)
        # 执行宣告操作请求响应
        self.h.tOnRspExecOrderAction.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspExecOrderAction.restype = None
        self.FP_OnRspExecOrderAction = CFUNCTYPE(None, POINTER(CThostFtdcInputExecOrderActionField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspExecOrderAction)
        self.h.tOnRspExecOrderAction(self.pSpi, self.FP_OnRspExecOrderAction)
        # 询价录入请求响应
        self.h.tOnRspForQuoteInsert.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspForQuoteInsert.restype = None
        self.FP_OnRspForQuoteInsert = CFUNCTYPE(None, POINTER(CThostFtdcInputForQuoteField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspForQuoteInsert)
        self.h.tOnRspForQuoteInsert(self.pSpi, self.FP_OnRspForQuoteInsert)
        # 报价录入请求响应
        self.h.tOnRspQuoteInsert.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQuoteInsert.restype = None
        self.FP_OnRspQuoteInsert = CFUNCTYPE(None, POINTER(CThostFtdcInputQuoteField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQuoteInsert)
        self.h.tOnRspQuoteInsert(self.pSpi, self.FP_OnRspQuoteInsert)
        # 报价操作请求响应
        self.h.tOnRspQuoteAction.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQuoteAction.restype = None
        self.FP_OnRspQuoteAction = CFUNCTYPE(None, POINTER(CThostFtdcInputQuoteActionField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQuoteAction)
        self.h.tOnRspQuoteAction(self.pSpi, self.FP_OnRspQuoteAction)
        # 批量报单操作请求响应
        self.h.tOnRspBatchOrderAction.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspBatchOrderAction.restype = None
        self.FP_OnRspBatchOrderAction = CFUNCTYPE(None, POINTER(CThostFtdcInputBatchOrderActionField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspBatchOrderAction)
        self.h.tOnRspBatchOrderAction(self.pSpi, self.FP_OnRspBatchOrderAction)
        # 期权自对冲录入请求响应
        self.h.tOnRspOptionSelfCloseInsert.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspOptionSelfCloseInsert.restype = None
        self.FP_OnRspOptionSelfCloseInsert = CFUNCTYPE(None, POINTER(CThostFtdcInputOptionSelfCloseField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspOptionSelfCloseInsert)
        self.h.tOnRspOptionSelfCloseInsert(self.pSpi, self.FP_OnRspOptionSelfCloseInsert)
        # 期权自对冲操作请求响应
        self.h.tOnRspOptionSelfCloseAction.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspOptionSelfCloseAction.restype = None
        self.FP_OnRspOptionSelfCloseAction = CFUNCTYPE(None, POINTER(CThostFtdcInputOptionSelfCloseActionField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspOptionSelfCloseAction)
        self.h.tOnRspOptionSelfCloseAction(self.pSpi, self.FP_OnRspOptionSelfCloseAction)
        # 申请组合录入请求响应
        self.h.tOnRspCombActionInsert.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspCombActionInsert.restype = None
        self.FP_OnRspCombActionInsert = CFUNCTYPE(None, POINTER(CThostFtdcInputCombActionField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspCombActionInsert)
        self.h.tOnRspCombActionInsert(self.pSpi, self.FP_OnRspCombActionInsert)
        # 请求查询报单响应
        self.h.tOnRspQryOrder.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryOrder.restype = None
        self.FP_OnRspQryOrder = CFUNCTYPE(None, POINTER(CThostFtdcOrderField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryOrder)
        self.h.tOnRspQryOrder(self.pSpi, self.FP_OnRspQryOrder)
        # 请求查询成交响应
        self.h.tOnRspQryTrade.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryTrade.restype = None
        self.FP_OnRspQryTrade = CFUNCTYPE(None, POINTER(CThostFtdcTradeField), POINTER(CThostFtdcRspInfoField), c_int32, c_bool)(self.__OnRspQryTrade)
        self.h.tOnRspQryTrade(self.pSpi, self.FP_OnRspQryTrade)
        # 请求查询投资者持仓响应
        self.h.tOnRspQryInvestorPosition.argtypes = [c_void_p, c_void_p]
        self.h.tOnRspQryInvestorPosition.restype = None
